--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header> 
-    <img src="downloads/blackgoose.png" alt="Black Goose Logo"/>
+    <img src="blackgoose.png" alt="Black Goose Logo"/>
     <br/>
     <h1>BLACK GOOSE BISTRO</h1>
   </header>
